compiled/helper-example/20-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helper-example
  namespace: mywebapp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: helper-example
  template:
    metadata:
      labels:
        app: helper-example
    spec:
      containers:
        - name: helper-example
          image: 'myorg/myappimage:latest'
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
        - name: super-sidecar
          image: 'myorg/sidecar:v1.0.0'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 2
