compiled/helper-example/20-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helper-example
  namespace: mywebapp
spec:
  selector:
    app: helper-example
  ports:
    - name: http
      port: 8080
      targetPort: 8080
